alterando projeto base

--- a/crud-com-springBoot-e-java/pom.xml
+++ b/crud-com-springBoot-e-java/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.4.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.br.crud-com-springBoot-e-java</groupId>
-	<artifactId>crud</artifactId>
+	<groupId>br.com.crud</groupId>
+	<artifactId>crud-com-springBoot-e-java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>crud</name>
-	<description>Demo project for Spring Boot</description>
+	<name>crud-com-springBoot-e-java</name>
+	<description>Projeto CRUD com Spring Boot e Java</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -39,6 +39,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
